# c

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
.github/: dependabot.yaml
.github/workflows/: godot-deb.yaml  workflow.yml
cargo/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/remote/: memchr-2.3.3.BUILD.bazel
src/: BUILD.bazel  Cargo.toml  cargo_dependencies.bzl  go.mod  go.sum
src/cmd/cli/: BUILD.bazel  main.go  main_test.go
src/cmd/godot/: BUILD.bazel  CHANGELOG.md
src/cmd/godot/debian/: description
src/cmd/kata/: BUILD.bazel
src/cmd/rcli/: BUILD.bazel  Cargo.toml  main.rs
src/experiments/dbinsert/: BUILD.bazel  README.md  init.sql  insert.go  insert_test.go  run-db.sh
src/katas/: README.md
src/katas/go/bowling/: BUILD.bazel  bowling.go  bowling_test.go
src/katas/go/magicsquares/: BUILD.bazel  gen.go  gen_test.go
src/katas/rust/bowling/: BUILD.bazel  bowling.rs
tools/: BUILD.bazel  bootstrap.sh  buildifier  gazelle  shellcheck
tools/ci/: BUILD.bazel  ci-collect.sh  ci-test.sh
tools/scripts/: BUILD.bazel  blackjack  bootstrap.sh  gazelle  mod-tidy  raze  rustfmt
