load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@com_github_aignas_rules_shellcheck//:def.bzl", "shellcheck", "shellcheck_test")

# gazelle:build_file_name BUILD.bazel
gazelle(name = "gazelle")

buildifier(name = "buildifier")

shellcheck(name = "shellcheck")
