load("@com_github_aignas_rules_shellcheck//:def.bzl", "shellcheck_test")

filegroup(
    name = "scripts",
    srcs = glob(
        ["*"],
        exclude = [
            "shellcheck",
            "BUILD.bazel",
        ],
    ),
)

shellcheck_test(
    name = "shellcheck",
    data = [":scripts"],
    tags = ["lint"],
)
