load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")
load(":version.bzl", "version")

go_library(
    name = "godot_lib",
    srcs = [
        "cli.go",
        "install.go",
        "link.go",
        "main.go",
        "parser.go",
        "stringset.go",
    ],
    importpath = "github.com/aignas/c/cmd/godot",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jessevdk_go_flags//:go-flags",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "godot",
    embed = [":godot_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "godot_test",
    srcs = [
        "cli_test.go",
        "install_test.go",
        "stringset_test.go",
    ],
    embed = [":godot_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

# Debian pkg

pkg_tar(
    name = "godot-bin",
    srcs = [":godot"],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "debian-data",
    extension = "tar.gz",
    deps = [
        ":godot-bin",
    ],
)

pkg_deb(
    name = "godot-debian",
    architecture = "amd64",
    built_using = "unzip (6.0.1)",
    data = ":debian-data",
    depends = [
        "git",
        "zsh",
    ],
    description_file = "debian/description",
    homepage = "http://anikevicius.lt",
    maintainer = "Ignas Anikevicius <anikevicius@gmail.com>",
    package = "godot",
    version = version,
)
