load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bowling",
    srcs = ["bowling.go"],
    importpath = "github.com/aignas/c/katas/go/bowling",
    visibility = ["//visibility:public"],
)

go_test(
    name = "bowling_test",
    srcs = ["bowling_test.go"],
    embed = [":bowling"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
