load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "magicsquares",
    srcs = ["gen.go"],
    importpath = "github.com/aignas/c/katas/go/magicsquares",
    visibility = ["//visibility:public"],
)

go_test(
    name = "magicsquares_test",
    srcs = ["gen_test.go"],
    embed = [":magicsquares"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
